# tt-reservation

./: .dockerignore  .env_template  .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  test_user.json
.github/workflows/: build_image.yml
tt-reservations-frontend/: Dockerfile  README.md  angular.json  entrypoint.sh  package-lock.json  package.json
tt-reservations-frontend/src/: index.html
tt-reservations-frontend/src/app/: access-token-handler.service.spec.ts  access-token-handler.service.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  authorization-interceptor.interceptor.spec.ts  authorization-interceptor.interceptor.ts  timepicking.service.spec.ts  timepicking.service.ts
tt-reservations-frontend/src/app/login-mask/: login-mask.component.html  login-mask.component.scss  login-mask.component.spec.ts  login-mask.component.ts
tt-reservations-frontend/src/app/time-picker/: time-picker.component.html  time-picker.component.ts
tt_reservations/: Dockerfile  book_times.py  exceptions.py  main.py
tt_reservations/auth/: methods.py  models.py  settings.py
